--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -12,6 +12,7 @@
     <p>I've been foraging mushrooms for around a year. First time I foraged one was in <strong>Hackney Marshes</strong> where I saw a woman picking mushrooms in that grew in a circle. Since then I've found loads more mushrooms</p>
 <ul>
   <li>Couliflower Mushroom</li>
+  <li>beef steak</li>
   <li>Fly Agaric</li>
   <li>Chicken of the woods</li>
 </ul>
@@ -20,4 +21,4 @@
 <script src="scripts/main.js"></script>
   <img src="images/download.png" alt="mushroom: Fly agaric or Fly amanita">
   </body>
-</html>
+</html>s
