--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -15,8 +15,13 @@
   <li>beef steak</li>
   <li>Fly Agaric</li>
   <li>Chicken of the woods</li>
+  <li>boletus</li>
 </ul>
 <p>A website that was very useful was <a href="https://www.wildfooduk.com/">Wild Food UK</a></p>
+<p>Other websites that you could check out are:</p>
+<ul>
+  <li>google <a href="htpps://www.google.com">google</a></li>
+</ul>
 <button>Change user</button>
 <script src="scripts/main.js"></script>
   <img src="images/download.png" alt="mushroom: Fly agaric or Fly amanita">
