--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
+    <meta name="author" content="Celia Alonso" />
+<meta
+  name="description"
+  content="A summary of my mycologist findings. What type of mushroosm I've found" />
     <title>My first mushroom page</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" />
