--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width" />
@@ -29,5 +29,6 @@
 <button>Change user</button>
 <script src="scripts/main.js"></script>
   <img src="images/download.png" alt="mushroom: Fly agaric or Fly amanita">
+  <a href="https://www.wildfooduk.com/"> <img src="images/red.png" alt="red mushrrom" </a>
   </body>
 </html>s
