--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -29,6 +29,6 @@
 <button>Change user</button>
 <script src="scripts/main.js"></script>
   <img src="images/download.png" alt="mushroom: Fly agaric or Fly amanita">
-  <a href="https://www.wildfooduk.com/"> <img src="images/red.png" alt="red mushrrom" </a>
+  <a href="https://www.wildfooduk.com/"> <img src="images/red.png" alt="red mushroom" </a>
   </body>
-</html>s
+</html>
