--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -28,7 +28,8 @@
 </ul>
 <button>Change user</button>
 <script src="scripts/main.js"></script>
-  <img src="images/download.png" alt="mushroom: Fly agaric or Fly amanita">
-  <a href="https://www.wildfooduk.com/"> <img src="images/red.png" alt="red mushroom" </a>
+  <a href="https://www.wildfooduk.com/"> <img src="images/fly.jpeg" alt="red mushroom" /> </a>
+  <a href="boletus.html"> <img src="images/red.png" alt=" red boletus" /> </a>
+
   </body>
 </html>
