--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -22,14 +22,16 @@
   <li>boletus</li>
 </ul>
 <p>A website that was very useful was <a href="https://www.wildfooduk.com/">Wild Food UK</a></p>
-<p>Other websites that you could check out are:</p>
-<ul>
-  <li>google <a href="htpps://www.google.com">google</a></li>
-</ul>
-<button>Change user</button>
+
+<p>There are three types of mushrooms:</p>
+
+<a href="gilled.html"> <img src="images/fly.jpeg" alt="red mushroom" /> </a>
+<p> Gilled </p>
+<a href="boletus.html"> <img src="images/red.png" alt=" red boletus" /> </a>
+<p>Boletus</p>
+
 <script src="scripts/main.js"></script>
-  <a href="https://www.wildfooduk.com/"> <img src="images/fly.jpeg" alt="red mushroom" /> </a>
-  <a href="boletus.html"> <img src="images/red.png" alt=" red boletus" /> </a>
+
 
   </body>
 </html>
