--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -7,31 +7,65 @@
 <meta
   name="description"
   content="A summary of my mycologist findings. What type of mushroosm I've found" />
-    <title>My first mushroom page</title>
+    <title>My mycologist findings and tips as an amateur myclogist</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link href="styles/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1> My Mycology findings - here is what I've found</h1>
-    <p>I've been foraging mushrooms for around a year. First time I foraged one was in <strong>Hackney Marshes</strong> where I saw a woman picking mushrooms in that grew in a circle. Since then I've found loads more mushrooms</p>
+    <section>
+    <header>
+      <h1>My Mycology findings</h1>
+    </header>
+  </section>
+  <section>
+    <a href="gilled.html"> <img src="images/fly.jpeg" alt="fly agarica mushroom" /> </a> 
+  </section>
+    
+        
+<section>
+   
+    <p>I've been foraging mushrooms for around two years. First time I foraged some was in Hackney Marshes where I saw a woman picking mushrooms that grew in a circle on the grass. I approached to her and told me what they were, when I researched online it seemed she was right. That's when it all begun.
+      A few months later I did a day couse with <a target="_blank" href="https://www.wildfooduk.com/">Wild Food UK</a> where they taught me the basic of mushrrom foraging.
+      Since then, I've been self learning being now able to identify quite a few subspieces of edible and non edible mushrooms.
+    </p>
+  </section>
+  <section>
+<p>Some of the materials I found the most useful are:</p>
 <ul>
-  <li>Couliflower Mushroom</li>
-  <li>beef steak</li>
-  <li>Fly Agaric</li>
-  <li>Chicken of the woods</li>
-  <li>boletus</li>
+  <li>Books like:</li>
+  <ul>
+    <li>
+      <a target="_blank" href="https://www.wob.com/en-gb/books/roger-phillips/mushrooms/9780330442374?gclid=Cj0KCQiAw8OeBhCeARIsAGxWtUwiMmR8LWwP-7yHvxbUuAX9zoNMbQNIZKWqEGhTXLvRSUqpP8IOwFIaAphQEALw_wcB#GOR001984210" />Foraging: Pocket Guide</a> 
+    </li>
+    <li>
+      <a target="_blank" href="https://www.wildfooduk.com/shop/the-wild-food-uk-foraging-pocket-guide/" />Mushrooms by Roger Phillips</a> 
+    </li>
+  </ul>
+  <li>Videos like the ones you can find in the following pages:</li>
+  <ul>
+    <li> <a target="_blank" href="https://www.instagram.com/plot.81/?hl=en/">Plot.81 on Instagram</a></li>
+    <li> <a target="_blank" href="https://www.wildfooduk.com/">Wild food UK</a></li>
+  </ul>
+ 
 </ul>
-<p>A website that was very useful was <a href="https://www.wildfooduk.com/">Wild Food UK</a></p>
+</section>
 
-<p>There are three types of mushrooms:</p>
 
-<a href="gilled.html"> <img src="images/fly.jpeg" alt="red mushroom" /> </a>
-<p> Gilled </p>
-<a href="boletus.html"> <img src="images/red.png" alt=" red boletus" /> </a>
-<p>Boletus</p>
+
+
+
+
+
+<figure>
+<a href="boletus.html"> <img src="images/red.png" alt="red boletus" /> </a>
+<figurecaption> Bolete Mushrooms</figurecaption>
+</figure>
 
 <script src="scripts/main.js"></script>
 
 
+<footer>
+  <p>©Copyright 2022 by Celia Alonso. All rights reversed.</p>
+</footer>
   </body>
 </html>
