--- a/my-webpage/index.html
+++ b/my-webpage/index.html
@@ -13,9 +13,8 @@
   </head>
   <body>
    <main>
-
-   </main> 
-   <section>
+    <div class="body"> 
+   <section class="header">
     <header>
       <h1>My Mycology findings</h1>
     </header>
@@ -75,4 +74,5 @@
   <p>©Copyright 2022 by Celia Alonso. All rights reversed.</p>
 </footer>
   </body>
+</div>
 </html>
