Started writting README

--- a/project-1/index.html
+++ b/project-1/index.html
@@ -55,12 +55,20 @@
 </ul>
 </section>
 
+<p>It's easily to feel overwhelmed when trying to start mycology or mushroom foraging. First thing is to start just
+  one mushroom at a time and don't try to learn them all at once. You can focus on learning the characteristics of 
+the 3 most common mushrooms in your country on the current season.
+
+Best time to start learning is <strong>now</strong>.
+</p>
+<p id="current-time"></p>
 
 <script src="scripts/main.js"></script>
 
 </main>
 <footer>
   <p>©Copyright 2022 by Celia Alonso. All rights reversed.</p>
+  
 </footer>
   </body>
 
